--- a/convolutional_network.ipynb
+++ b/convolutional_network.ipynb
@@ -81,14 +81,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#apply X_train to the model\n",
+    "#create a tensor from the X_train and X_test numpy arrays\n",
     "X_train = torch.from_numpy(X_train).float()\n",
-    "X_train = X_train.unsqueeze(1)\n",
+    "X_test = torch.from_numpy(X_test).float()\n",
+    "\n",
+    "\n",
+    "#X_train = X_train.unsqueeze(1)\n",
     "#flatten the X_train to 1D\n",
     "X_train = torch.flatten(X_train, 1)\n",
     "\n",
-    "X_test = torch.from_numpy(X_test).float()\n",
-    "X_test = X_test.unsqueeze(1)\n",
+    "#X_test = X_test.unsqueeze(1)\n",
     "X_test = torch.flatten(X_test, 1)"
    ]
   },
@@ -271,7 +273,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z8/wd7qc7cs1wd8pr3h4y_6lxxw0000gn/T/ipykernel_35130/477483474.py:19: RuntimeWarning: overflow encountered in exp\n",
+      "/var/folders/z8/wd7qc7cs1wd8pr3h4y_6lxxw0000gn/T/ipykernel_35798/477483474.py:19: RuntimeWarning: overflow encountered in exp\n",
       "  return 1 / (1 + np.exp (-x))\n"
      ]
     },
@@ -279,107 +281,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, loss: 0.178125, accuracy: 0.109375\n",
-      "Epoch 1, loss: 0.15625, accuracy: 0.21875\n",
-      "Epoch 2, loss: 0.140625, accuracy: 0.296875\n",
-      "Epoch 3, loss: 0.134375, accuracy: 0.328125\n",
-      "Epoch 4, loss: 0.11875, accuracy: 0.40625\n",
-      "Epoch 5, loss: 0.15, accuracy: 0.25\n",
-      "Epoch 6, loss: 0.125, accuracy: 0.375\n",
-      "Epoch 7, loss: 0.125, accuracy: 0.375\n",
-      "Epoch 8, loss: 0.109375, accuracy: 0.453125\n",
+      "Epoch 0, loss: 0.1375, accuracy: 0.3125\n",
+      "Epoch 1, loss: 0.178125, accuracy: 0.109375\n",
+      "Epoch 2, loss: 0.13125, accuracy: 0.34375\n",
+      "Epoch 3, loss: 0.115625, accuracy: 0.421875\n",
+      "Epoch 4, loss: 0.096875, accuracy: 0.515625\n",
+      "Epoch 5, loss: 0.13125, accuracy: 0.34375\n",
+      "Epoch 6, loss: 0.10625, accuracy: 0.46875\n",
+      "Epoch 7, loss: 0.096875, accuracy: 0.515625\n",
+      "Epoch 8, loss: 0.103125, accuracy: 0.484375\n",
       "Epoch 9, loss: 0.10625, accuracy: 0.46875\n",
-      "Epoch 10, loss: 0.13125, accuracy: 0.34375\n",
+      "Epoch 10, loss: 0.084375, accuracy: 0.578125\n",
       "Epoch 11, loss: 0.0875, accuracy: 0.5625\n",
-      "Epoch 12, loss: 0.090625, accuracy: 0.546875\n",
-      "Epoch 13, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 14, loss: 0.128125, accuracy: 0.359375\n",
-      "Epoch 15, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 16, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 17, loss: 0.071875, accuracy: 0.640625\n",
-      "Epoch 18, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 19, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 20, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 21, loss: 0.08125, accuracy: 0.59375\n",
-      "Epoch 22, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 23, loss: 0.084375, accuracy: 0.578125\n",
-      "Epoch 24, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 25, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 26, loss: 0.0375, accuracy: 0.8125\n",
-      "Epoch 27, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 28, loss: 0.0625, accuracy: 0.6875\n",
-      "Epoch 29, loss: 0.071875, accuracy: 0.640625\n",
-      "Epoch 30, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 31, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 32, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 12, loss: 0.071875, accuracy: 0.640625\n",
+      "Epoch 13, loss: 0.09375, accuracy: 0.53125\n",
+      "Epoch 14, loss: 0.09375, accuracy: 0.53125\n",
+      "Epoch 15, loss: 0.11875, accuracy: 0.40625\n",
+      "Epoch 16, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 17, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 18, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 19, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 20, loss: 0.04375, accuracy: 0.78125\n",
+      "Epoch 21, loss: 0.059375, accuracy: 0.703125\n",
+      "Epoch 22, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 23, loss: 0.04375, accuracy: 0.78125\n",
+      "Epoch 24, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 25, loss: 0.071875, accuracy: 0.640625\n",
+      "Epoch 26, loss: 0.078125, accuracy: 0.609375\n",
+      "Epoch 27, loss: 0.08125, accuracy: 0.59375\n",
+      "Epoch 28, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 29, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 30, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 31, loss: 0.078125, accuracy: 0.609375\n",
+      "Epoch 32, loss: 0.046875, accuracy: 0.765625\n",
       "Epoch 33, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 34, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 35, loss: 0.071875, accuracy: 0.640625\n",
-      "Epoch 36, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 37, loss: 0.040625, accuracy: 0.796875\n",
-      "Epoch 38, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 39, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 40, loss: 0.078125, accuracy: 0.609375\n",
-      "Epoch 41, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 42, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 43, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 34, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 35, loss: 0.028125, accuracy: 0.859375\n",
+      "Epoch 36, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 37, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 38, loss: 0.0625, accuracy: 0.6875\n",
+      "Epoch 39, loss: 0.103125, accuracy: 0.484375\n",
+      "Epoch 40, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 41, loss: 0.08125, accuracy: 0.59375\n",
+      "Epoch 42, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 43, loss: 0.06875, accuracy: 0.65625\n",
       "Epoch 44, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 45, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 46, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 47, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 48, loss: 0.046875, accuracy: 0.765625\n",
-      "Epoch 49, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 50, loss: 0.08125, accuracy: 0.59375\n",
-      "Epoch 51, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 52, loss: 0.078125, accuracy: 0.609375\n",
-      "Epoch 53, loss: 0.071875, accuracy: 0.640625\n",
-      "Epoch 54, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 45, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 46, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 47, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 48, loss: 0.028125, accuracy: 0.859375\n",
+      "Epoch 49, loss: 0.0625, accuracy: 0.6875\n",
+      "Epoch 50, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 51, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 52, loss: 0.0625, accuracy: 0.6875\n",
+      "Epoch 53, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 54, loss: 0.0625, accuracy: 0.6875\n",
       "Epoch 55, loss: 0.04375, accuracy: 0.78125\n",
-      "Epoch 56, loss: 0.040625, accuracy: 0.796875\n",
-      "Epoch 57, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 58, loss: 0.0875, accuracy: 0.5625\n",
-      "Epoch 59, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 60, loss: 0.0625, accuracy: 0.6875\n",
-      "Epoch 61, loss: 0.021875, accuracy: 0.890625\n",
-      "Epoch 62, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 63, loss: 0.075, accuracy: 0.625\n",
-      "Epoch 64, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 65, loss: 0.028125, accuracy: 0.859375\n",
-      "Epoch 66, loss: 0.075, accuracy: 0.625\n",
-      "Epoch 67, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 68, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 69, loss: 0.05625, accuracy: 0.71875\n",
-      "Epoch 70, loss: 0.090625, accuracy: 0.546875\n",
-      "Epoch 71, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 72, loss: 0.0625, accuracy: 0.6875\n",
-      "Epoch 73, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 74, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 75, loss: 0.046875, accuracy: 0.765625\n",
-      "Epoch 76, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 77, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 78, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 79, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 80, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 81, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 82, loss: 0.08125, accuracy: 0.59375\n",
-      "Epoch 83, loss: 0.0625, accuracy: 0.6875\n",
-      "Epoch 84, loss: 0.0625, accuracy: 0.6875\n",
-      "Epoch 85, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 86, loss: 0.046875, accuracy: 0.765625\n",
-      "Epoch 87, loss: 0.040625, accuracy: 0.796875\n",
-      "Epoch 88, loss: 0.071875, accuracy: 0.640625\n",
-      "Epoch 89, loss: 0.05, accuracy: 0.75\n",
-      "Epoch 90, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 91, loss: 0.0375, accuracy: 0.8125\n",
-      "Epoch 92, loss: 0.034375, accuracy: 0.828125\n",
+      "Epoch 56, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 57, loss: 0.040625, accuracy: 0.796875\n",
+      "Epoch 58, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 59, loss: 0.084375, accuracy: 0.578125\n",
+      "Epoch 60, loss: 0.090625, accuracy: 0.546875\n",
+      "Epoch 61, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 62, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 63, loss: 0.046875, accuracy: 0.765625\n",
+      "Epoch 64, loss: 0.059375, accuracy: 0.703125\n",
+      "Epoch 65, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 66, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 67, loss: 0.06875, accuracy: 0.65625\n",
+      "Epoch 68, loss: 0.046875, accuracy: 0.765625\n",
+      "Epoch 69, loss: 0.078125, accuracy: 0.609375\n",
+      "Epoch 70, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 71, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 72, loss: 0.046875, accuracy: 0.765625\n",
+      "Epoch 73, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 74, loss: 0.046875, accuracy: 0.765625\n",
+      "Epoch 75, loss: 0.065625, accuracy: 0.671875\n",
+      "Epoch 76, loss: 0.0375, accuracy: 0.8125\n",
+      "Epoch 77, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 78, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 79, loss: 0.040625, accuracy: 0.796875\n",
+      "Epoch 80, loss: 0.040625, accuracy: 0.796875\n",
+      "Epoch 81, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 82, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 83, loss: 0.053125, accuracy: 0.734375\n",
+      "Epoch 84, loss: 0.03125, accuracy: 0.84375\n",
+      "Epoch 85, loss: 0.04375, accuracy: 0.78125\n",
+      "Epoch 86, loss: 0.028125, accuracy: 0.859375\n",
+      "Epoch 87, loss: 0.04375, accuracy: 0.78125\n",
+      "Epoch 88, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 89, loss: 0.04375, accuracy: 0.78125\n",
+      "Epoch 90, loss: 0.059375, accuracy: 0.703125\n",
+      "Epoch 91, loss: 0.05, accuracy: 0.75\n",
+      "Epoch 92, loss: 0.05625, accuracy: 0.71875\n",
       "Epoch 93, loss: 0.0375, accuracy: 0.8125\n",
-      "Epoch 94, loss: 0.065625, accuracy: 0.671875\n",
-      "Epoch 95, loss: 0.059375, accuracy: 0.703125\n",
-      "Epoch 96, loss: 0.053125, accuracy: 0.734375\n",
-      "Epoch 97, loss: 0.04375, accuracy: 0.78125\n",
-      "Epoch 98, loss: 0.06875, accuracy: 0.65625\n",
-      "Epoch 99, loss: 0.05625, accuracy: 0.71875\n",
-      "loss: 0.055, accuracy: 0.725\n"
+      "Epoch 94, loss: 0.046875, accuracy: 0.765625\n",
+      "Epoch 95, loss: 0.04375, accuracy: 0.78125\n",
+      "Epoch 96, loss: 0.05625, accuracy: 0.71875\n",
+      "Epoch 97, loss: 0.0625, accuracy: 0.6875\n",
+      "Epoch 98, loss: 0.071875, accuracy: 0.640625\n",
+      "Epoch 99, loss: 0.040625, accuracy: 0.796875\n",
+      "loss: 0.04972, accuracy: 0.7514\n"
      ]
     }
    ],
@@ -413,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (default, Sep 16 2021, 08:50:36) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
