--- a/main_new.ipynb
+++ b/main_new.ipynb
@@ -1065,7 +1065,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1079,12 +1079,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 08:50:36) \n[Clang 10.0.0 ]"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ef166213a119dea7a0b1a64e774e94a94a893f8530fa4c669d6e23575311d886"
+    "hash": "d23f3ceec305a45481076084313530cecc6283a24046b34365f00383ab0a81b1"
    }
   }
  },
